list, add and edit company facilities
